After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 164455 - Sizes in SVG file and in on screen tooltip don't match
Sizes in SVG file and in on screen tooltip don't match
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
1.4.x
Other Linux
: Normal normal
: ---
Assigned To: Emmanuel Pacaud
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2005-01-18 12:05 UTC by Dieter Faulbaum
Modified: 2005-01-24 23:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.58 KB, patch)
2005-01-18 13:18 UTC, Emmanuel Pacaud
none Details | Review

Description Dieter Faulbaum 2005-01-18 12:05:42 UTC
Create a chart (with e.g. 400 * 500 pixels) and save it as a svg-file.
The width in the svg-file is "420.211" and the height "339.15".
I don't understand these values.
I know it's called _Scalable_ Vector Graphics.-)
Comment 1 Emmanuel Pacaud 2005-01-18 13:18:28 UTC
Height and width unit in SVG files is point.

These values are displayed in a tooltip you can see when you resize a sheet object.

Nevertheless, current display is one point wrong. Attached patch should fix this
problem.

Jody, OK to commit ?

To be more accurate, I guess 1.0 should be 72/dpi.
Comment 2 Emmanuel Pacaud 2005-01-18 13:18:58 UTC
Created attachment 36174 [details] [review]
patch
Comment 3 Emmanuel Pacaud 2005-01-24 23:12:30 UTC
Fixed in CVS.