http://bugzilla.gnome.org/show_bug.cgi?id=164455 fix svg size.

2005-01-24  Emmanuel Pacaud <emmanuel.pacaud@univ-poitiers.fr>

	http://bugzilla.gnome.org/show_bug.cgi?id=164455
	* src/sheet-object-graph.c (sog_cb_save_as): fix svg size.